--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
       <version>1.4.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.englishtown.vertx</groupId>
+      <artifactId>vertx-guice</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
   </dependencies>
   <properties>
     <vertx.version>3.5.1</vertx.version>
